--- a/index.html
+++ b/index.html
@@ -32,11 +32,38 @@
         h1{
             font-size: 60px;
             color: yellow;
+            animation-name: changeColors;
+            animation-duration:3s;
+            animation-delay: 1s;
+            animation-iteration-count: infinite;
+            font-family: "Righteous", cursive;
         }
+
+        @keyframes changeColors {
+            0%,20% {
+                color: yellow;
+            }
+            25% {
+                color: green;
+            }
+            50% {
+                color: deeppink;
+            }
+            75% {
+                color: brown;
+            }
+            100% {
+                color: purple;
+            }
+        }
+
+
         h3{
-            font-size: 100px;
+            font-size: 70px;
             color: red;
-            bottom: 100px;
+            bottom: 300px;
+            margin-left: 200px;
+            margin-top: -65px;
 
         }
 
@@ -75,7 +102,7 @@
         }
 
        main> section>img{
-            padding: 0 10px 0 10px;
+            padding: 0 20px 0 20px;
             position: relative;
             bottom: 350px;
         }
@@ -319,7 +346,9 @@
 
         }
 
-
+        section>section>img>{
+            width: 200px;
+        }
 
 </style>
 </head>
@@ -327,11 +356,11 @@
 <header>
     <nav>
        <ul>
-           <li>About</li>
-           <li>Education</li>
-           <li>Skills</li>
-           <li>Projects</li>
-           <li>Contact</li>
+           <li><a href="sub/aboutme.html">About</a></li>
+           <li><a href="sub/education.html">Education</a></li>
+           <li><a href="sub/skills.html">Skills</a></li>
+           <li><a href="sub/projects.html">Projects</a></li>
+           <li><a href="sub/contactme.html">Contact</a></li>
        </ul>
     </nav>
 </header>
@@ -351,11 +380,13 @@
 
 
            <section>
-        <img src="assests/images/facebook%20(1).png" alt="" width="50"><br><br>
-        <img src="assests/images/linkedin%20(1).png" alt="" width="50"><br><br>
-        <img src="assests/images/whatsapp.png" alt="" width="50"><br><br>
-        <img src="assests/images/github%20(1).png" alt="" width="50">
-        </section>
+               <section>
+<!--                <img src="assests/images/facebook%20(1).png" alt="" width="50"><br>-->
+               <a href="https://www.linkedin.com/in/chamodi-samarasinghe-a58188217"><img src="assests/images/linkedin%20(1).png" alt="" width="50"></a><br><br>
+               <a href="https://whatsapp.com/dl/"><img src="assests/images/whatsapp.png" alt="" width="50"></a><br><br>
+               <a href="https://github.com/chamodisamarasinghe"><img src="assests/images/github%20(1).png" alt="" width="50"></a>
+               </section>
+             </section>
 
 
 
