--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         header{
             position: relative;
             height: 80px;
-            box-shadow: -2px 6px 45px -4px #917a7a;
+            box-shadow: -2px 6px 45px -4px darkslateblue;
         }
 
         body{
@@ -36,7 +36,7 @@
             animation-duration:3s;
             animation-delay: 1s;
             animation-iteration-count: infinite;
-            font-family: "Righteous", cursive;
+            /*font-family: "Righteous", cursive;*/
         }
 
         @keyframes changeColors {
@@ -44,16 +44,16 @@
                 color: yellow;
             }
             25% {
-                color: green;
+                color: dodgerblue;
             }
             50% {
-                color: deeppink;
+                color: darkslateblue;
             }
             75% {
-                color: brown;
+                color: blue;
             }
             100% {
-                color: purple;
+                color: darkblue;
             }
         }
 
@@ -349,7 +349,17 @@
         section>section>img>{
             width: 200px;
         }
-
+       main>section> section>img{
+           position: absolute;
+           margin: auto;
+           margin-left: 400px;
+           margin-top: -500px;
+        }
+        body>img{
+            position: absolute;
+            margin-top: 250px;
+            margin-left: 350px;
+        }
 </style>
 </head>
 <body>
@@ -364,7 +374,7 @@
        </ul>
     </nav>
 </header>
-
+<!--<img src="assests/images/hobb.png" alt="" width="300">-->
 <main>
 
     <section>
@@ -374,16 +384,17 @@
             <pre><h2><i>     Student at Institute of Software Engineering</i></h2>
                 <h3>            IJSE</h3>
             </pre>
-
+<!--            <img src="assests/gif/hi.gif" alt="" width="100">-->
         </div>
         </section>
 
 
            <section>
+<!--               <img src="assests/images/hobb.png" alt="" width="300">-->
                <section>
 <!--                <img src="assests/images/facebook%20(1).png" alt="" width="50"><br>-->
-               <a href="https://www.linkedin.com/in/chamodi-samarasinghe-a58188217"><img src="assests/images/linkedin%20(1).png" alt="" width="50"></a><br><br>
-               <a href="https://whatsapp.com/dl/"><img src="assests/images/whatsapp.png" alt="" width="50"></a><br><br>
+               <a href="https://www.linkedin.com/in/chamodi-samarasinghe-a58188217"><img src="assests/images/linkedin%20(1).png" alt="" width="50"></a>
+               <a href="https://whatsapp.com/dl/"><img src="assests/images/whatsapp.png" alt="" width="50"></a>
                <a href="https://github.com/chamodisamarasinghe"><img src="assests/images/github%20(1).png" alt="" width="50"></a>
                </section>
              </section>
@@ -393,7 +404,8 @@
 
 <section>
     <div>
-        <img src="assests/images/about.jpg" alt="" width="180" align="right">
+<!--        <img src="assests/images/about.jpg" alt="" width="180" align="right">-->
+        <img src="assests/images/san.png" alt="" width="450">
     </div>
 
 </section>
