--- a/sub/projects.html
+++ b/sub/projects.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
     <style>
-        h1{
-            color: white;
+        h1 {
+            color: yellow;
             font-size: 40px;
-            position: absolute;
-            margin-left: 100px;
+            /*position: absolute;*/
+            margin-left: 300px;
         }
 
         body{
@@ -27,7 +27,7 @@
             position: absolute;
             left: 0px;
             right: 600px;
-            top: 0;
+            top: 20px;
             bottom: 0;
             margin: auto;
             overflow: hidden;
@@ -151,7 +151,7 @@
             font-size: 25px;
             margin-left: 1000px;
             color: white;
-            top: 10px;
+            top: -10px;
             font-family: 'Lobster', cursive;
 
         }
@@ -282,7 +282,7 @@
         <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2001"><h2>Assignment - 01</h2></a></li>
         <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2002"><h2>Assignment - 02</h2></a></li>
         <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2003"><h2>Assignment - 03</h2></a></li>
-        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2004"><h2>Assignment - 04</h2></a></li><br><br>
+        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2004"><h2>Assignment - 04</h2></a></li><br>
         <li><a href="../My%20Projects/CSS/Animations/Assignment-%2005"><h2>Assignment - 05</h2></a></li>
         <li><a href="../My%20Projects/CSS/Animations/Assignment-%2006"><h2>Assignment - 06</h2></a></li>
         <li><a href="../My%20Projects/CSS/Animations/Assignment-%2007"><h2>Assignment - 07</h2></a></li>
