--- a/sub/projects.html
+++ b/sub/projects.html
@@ -21,130 +21,130 @@
         body{
             background-color: black;
         }
-        main{
-            width: 850px;
-            height: 450px;
-            position: absolute;
-            left: 0px;
-            right: 600px;
-            top: 20px;
-            bottom: 0;
-            margin: auto;
-            overflow: hidden;
-        }
+        /*main{*/
+        /*    width: 850px;*/
+        /*    height: 450px;*/
+        /*    position: absolute;*/
+        /*    left: 0px;*/
+        /*    right: 600px;*/
+        /*    top: 20px;*/
+        /*    bottom: 0;*/
+        /*    margin: auto;*/
+        /*    overflow: hidden;*/
+        /*}*/
 
-        main>section{
-            height: 129%;
-            width: 500%;
-            display: flex;
-            animation-name: slideme;
-            animation-direction: alternate;
-            animation-duration: 10s;
-        }
+        /*main>section{*/
+        /*    height: 129%;*/
+        /*    width: 500%;*/
+        /*    display: flex;*/
+        /*    animation-name: slideme;*/
+        /*    animation-direction: alternate;*/
+        /*    animation-duration: 10s;*/
+        /*}*/
 
-        main>section>div{
-            width: 100%;
+        /*main>section>div{*/
+        /*    width: 100%;*/
 
-        }
+        /*}*/
 
-        section>div:nth-child(1){
-            background: url("assests/images/1.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /*section>div:nth-child(1){*/
+        /*    background: url("assests/images/1.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
 
-        section>div:nth-child(2){
-            background: url("assests/images/2.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /*section>div:nth-child(2){*/
+        /*    background: url("assests/images/2.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
 
-        section>div:nth-child(3){
-            background: url("assests/images/3.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /*section>div:nth-child(3){*/
+        /*    background: url("assests/images/3.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
 
-        section>div:nth-child(4){
-            background: url("assests/images/7.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /*section>div:nth-child(4){*/
+        /*    background: url("assests/images/7.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
 
-        section>div:nth-child(5){
-            background: url("assests/images/5.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /*section>div:nth-child(5){*/
+        /*    background: url("assests/images/5.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
 
-        section>div:nth-child(6){
-            background: url("assests/images/7.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /*section>div:nth-child(6){*/
+        /*    background: url("assests/images/7.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
 
-        section>div:nth-child(7){
-            background: url("assests/images/7.png");
-            background-size: cover;
-            background-position: center;
-        }
-        section>div:nth-child(8){
-            background: url("assests/images/4.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /*section>div:nth-child(7){*/
+        /*    background: url("assests/images/7.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
+        /*section>div:nth-child(8){*/
+        /*    background: url("assests/images/4.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
 
-        section>div:nth-child(9){
-            background: url("assests/images/5.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /*section>div:nth-child(9){*/
+        /*    background: url("assests/images/5.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
 
-        section>div:nth-child(10){
-            background: url("assests/images/7.png");
-            background-size: cover;
-            background-position: center;
-        }
+        /*section>div:nth-child(10){*/
+        /*    background: url("assests/images/7.png");*/
+        /*    background-size: cover;*/
+        /*    background-position: center;*/
+        /*}*/
 
-        @keyframes slideme {
-            0%,10%{
-                transform: translateX(0);
-            }
+        /*@keyframes slideme {*/
+        /*    0%,10%{*/
+        /*        transform: translateX(0);*/
+        /*    }*/
 
-            10%,20%{
-                transform: translateX(-10%);
-            }
+        /*    10%,20%{*/
+        /*        transform: translateX(-10%);*/
+        /*    }*/
 
-            20%,30%{
-                transform: translateX(-20%);
-            }
+        /*    20%,30%{*/
+        /*        transform: translateX(-20%);*/
+        /*    }*/
 
 
-            30%,40%{
-                transform: translateX(-30%);
-            }
+        /*    30%,40%{*/
+        /*        transform: translateX(-30%);*/
+        /*    }*/
 
-            40%,50%{
-                transform: translateX(-40);
-            }
+        /*    40%,50%{*/
+        /*        transform: translateX(-40);*/
+        /*    }*/
 
-            50%,60%{
-                transform: translateX(-50);
-            }
-            60%,70%{
-                transform: translateX(-60);
-            }
+        /*    50%,60%{*/
+        /*        transform: translateX(-50);*/
+        /*    }*/
+        /*    60%,70%{*/
+        /*        transform: translateX(-60);*/
+        /*    }*/
 
-            70%,80%{
-                transform: translateX(-70);
-            }
-            80%,90%{
-                transform: translateX(-80);
-            }
-            90%,100%{
-                transform: translateX(-90);
-            }
-        }
+        /*    70%,80%{*/
+        /*        transform: translateX(-70);*/
+        /*    }*/
+        /*    80%,90%{*/
+        /*        transform: translateX(-80);*/
+        /*    }*/
+        /*    90%,100%{*/
+        /*        transform: translateX(-90);*/
+        /*    }*/
+        /*}*/
 
         div>ul>li>a>h2{
             /*position: absolute;*/
@@ -267,6 +267,26 @@
                animation-duration: 10s;
            }
        }
+
+        section>div>img{
+            position: absolute;
+            margin-top: -500px;
+            animation: zoomin 1s linear 1;
+            animation-delay: 0.1s;
+            visibility: hidden;
+            animation-fill-mode: forwards;
+        }
+
+        @keyframes zoomin {
+            0%{
+                transform: scale(0.5);
+                visibility: visible;
+            }
+            100%{
+                transform: scale(1);
+                visibility: visible;
+            }
+        }
     </style>
 
 </head>
@@ -297,7 +317,7 @@
 
 
 <section>
-        <div></div>
+        <div><img src="../assests/images/read.png" alt="" width="900" align="center"></div>
         <div></div>
         <div></div>
         <div></div>
