--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
            <li><a href="sub/education.html">Education</a></li>
            <li><a href="sub/skills.html">Skills</a></li>
            <li><a href="sub/projects.html">Projects</a></li>
+           <li><a href="sub/projects.html">Assignments</a></li>
            <li><a href="sub/contactme.html">Contact</a></li>
        </ul>
     </nav>
