--- a/sub/education.html
+++ b/sub/education.html
@@ -135,6 +135,39 @@
                 visibility: visible;
             }
         }
+
+        section1>div:nth-child(1){
+            position: absolute;
+            margin-left: 150px;
+            margin-top: -110px;
+        }
+        section1>div:nth-child(2){
+            position: absolute;
+            margin-left: 300px;
+            margin-top: -105px;
+        }
+        section1>div:nth-child(3){
+            position: absolute;
+            margin-left: 450px;
+            margin-top: -95px;
+        }
+        section1>div:nth-child(4){
+            position: absolute;
+            margin-left: 570px;
+            margin-top: -90px;
+        }
+        section1>div:nth-child(5){
+            position: absolute;
+            margin-left: 700px;
+            margin-top: -80px;
+        }
+
+        @media all and (max-width: 426px){
+
+
+        }
+
+
     </style>
 </head>
 
@@ -185,28 +218,13 @@
     </main>
 </section>
 
-<!--    <ul>-->
-<!--        <div>-->
-<!--    <img src="../assests/images/den.png" alt="" width="50" align="center">-->
-<!--    <br><img src="../assests/images/daughter.png" alt="" width="100" align="center">-->
-<!--        <li><h3>1-5 (2004-2008) Deniyaya Central College</h3></li>-->
-<!--        </div>-->
-
-
-<!--     <img src="../assests/images/SouthlandsCollege.jpg" alt="" width="50" align="center">-->
-<!--        <br><img src="../assests/images/student.png" alt="" width="100" align="center">-->
-<!--        <li><h3>6-13 (2011-2017) Southlands College</h3></li>-->
-
-<!--        <img src="../assests/images/ijse.png" alt="" width="50" align="center">-->
-<!--        <br><img src="../assests/images/student%20(1).png" alt="" width="100" align="center">-->
-<!--        <li><h3>Higher Studies (2019-2022) Institute of Software Engineering</h3></li>-->
-
-<!--        <img src="../assests/images/open.jpg" alt="" width="50" align="center">-->
-<!--        <li><h3>Open University</h3></li>-->
-
-<!--        <img src="../assests/images/bee.png" alt="" width="50" align="center">-->
-<!--        <li><h3>The Beeline English Acadamy</h3></li>-->
-
+<section1>
+    <div>><img src="../assests/images/arrow.png" alt="" width="30" height="160px" align="center"></div>
+    <div>><img src="../assests/images/arrow.png" alt="" width="30" height="125px" align="center"></div>
+    <div>><img src="../assests/images/arrow.png" alt="" width="30" height="100px" align="center"></div>
+    <div>><img src="../assests/images/arrow.png" alt="" width="30" height="75px" align="center"></div>
+    <div>><img src="../assests/images/arrow.png" alt="" width="30" height="45px" align="center"></div>
+</section1>
 
 
 </body>
